--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -201,7 +201,7 @@
                <!-- tmpl_if __last__ --> 
 
                </table>              
-               <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+               <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
            <!-- /tmpl_if -->   
          <!-- /tmpl_loop -->
          </div>
@@ -310,7 +310,7 @@
        </tr>
        <!-- tmpl_if __last__ --> 
        </table>
-       <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+       <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
 
        <!-- /tmpl_if --> 
 
@@ -416,7 +416,7 @@
 
                 <!-- tmpl_if __last__ --> 
                </table>
-               <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+               <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
                <!-- /tmpl_if --> 
              <!-- /tmpl_loop -->
              <p>&nbsp;</p>
@@ -520,7 +520,7 @@
    <!-- tmpl_if __last__ --> 
 
    </table>
-   <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+   <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
 
    <!-- /tmpl_if --> 
  <!-- /tmpl_loop -->
@@ -625,7 +625,7 @@
        <!-- tmpl_if __last__ --> 
 
        </table>
-       <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+       <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
 
        <!-- /tmpl_if --> 
 
@@ -743,7 +743,7 @@
    </tr>
    <!-- tmpl_if __last__ --> 
    </table>
-   <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+   <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
    <!-- /tmpl_if --> 
 
  <!-- /tmpl_loop -->
