--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -9,7 +9,7 @@
 
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
-  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/foundation/foundation.css" >
+  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/foundation.css" >
   <!-- tmpl_if comment --> 
     <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" >
   <!-- /tmpl_if --> 
@@ -21,15 +21,15 @@
 <!-- /tmpl_if --> 
 
 <!-- jQuery -->
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.11.3.min.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-1.11.3.min.js"></script>
 
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.plainoverlay.min.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery.plainoverlay.min.js"></script>
 
 <!-- tmpl_if comment --><script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script><!-- /tmpl_if -->
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-ui-1.9.1.custom.min.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-ui-1.9.1.custom.min.js"></script>
 
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.tablesorter.js"></script>
-<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery-ui-1.9.1.custom.min.css">
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery.tablesorter.js"></script>
+<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery-ui-1.9.1.custom.min.css">
 
 <!-- tmpl_if load_google_viz --> 
 	<!-- Google Visualization -->
@@ -39,20 +39,20 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if load_jquery_validate --> 
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.validate.js"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery.validate.js"></script>
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if load_datetimepicker --> 
-    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery.datetimepicker.css"/ >
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.datetimepicker.js"></script>
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/unserialize.jquery.1.0.2.js"></script>
+    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery.datetimepicker.css"/ >
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery.datetimepicker.js"></script>
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery/unserialize.jquery.1.0.2.js"></script>
     
 <!-- /tmpl_if -->
 
 
 <!-- tmpl_if load_linedtextarea --> 
-    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery-linedtextarea.css"/ >
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-linedtextarea.js"></script>    
+    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery-linedtextarea.css"/ >
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-linedtextarea.js"></script>    
 <!-- /tmpl_if -->
 
 
@@ -72,11 +72,11 @@
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
 
-	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/colorbox/colorbox.css">
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/colorbox/jquery.colorbox-min.js"></script>
+	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/colorbox/colorbox.css">
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery/colorbox/jquery.colorbox-min.js"></script>
 
-	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/select2.css">
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/select2.js"></script>
+	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery/select2.css">
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery/select2.js"></script>
     
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
@@ -85,8 +85,8 @@
 	
 
 
-	<link type="text/css" media="screen" rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/foundation/responsive-tables.css" >
-	<script type="text/javascript" src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation/responsive-tables.js"></script>
+	<link type="text/css" media="screen" rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/responsive-tables.css" >
+	<script type="text/javascript" src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/responsive-tables.js"></script>
 
 	
 	
@@ -275,9 +275,9 @@
 	</div> 
 
 
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation.min.js"></script>
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation/foundation.offcanvas.js"></script>
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation/foundation.magellan.js"></script>
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js"></script>
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.offcanvas.js"></script>
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.magellan.js"></script>
 	
     <script>
       $(document).foundation();
