--- a/dada/templates/default_screen.tmpl
+++ b/dada/templates/default_screen.tmpl
@@ -56,7 +56,7 @@
 	                   <!-- tmpl_var newest_archive_blurb -->...
 	                  </em>
 	                 </p>
-	                 <p style="text-align:right">
+	                 <p class="text-right">
 	                  <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list_settings.list -->/newest/">
 	                   More...
 	                  </a>
