--- a/dada/templates/draft_notice_widget.tmpl
+++ b/dada/templates/draft_notice_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin draft_notice_widget.tmpl --> 
 <div id="draft_notice">
-	<p class="alert" style="text-align:right">
+	<p class="alert" class="text-right">
 		Changes Unsaved
 	</p>
 </div>
