--- a/dada/templates/edit_archived_msg.tmpl
+++ b/dada/templates/edit_archived_msg.tmpl
@@ -47,7 +47,7 @@
 
     <div class="floatclear"></div>
     
-   <p style="text-align:right">
+   <p class="text-right">
 	<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=edit_archived_msg;process=prefs;id=<!-- tmpl_var id -->">
 		Archive Editor Preferences...
 	</a>
