--- a/dada/templates/extensions/multiple_subscribe/default.tmpl
+++ b/dada/templates/extensions/multiple_subscribe/default.tmpl
@@ -42,7 +42,7 @@
                <!-- tmpl_var newest_archive_blurb -->...
               </em>
              </p>
-             <p style="text-align:right">
+             <p class="text-right">
               <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var uri_escaped_list -->/newest/">
                More...
               </a>
