--- a/dada/templates/fancy_print_out_list_widget.tmpl
+++ b/dada/templates/fancy_print_out_list_widget.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_include view_list_table_widget.tmpl --> 
 
-<p style="text-align:right">
+<p class="text-right">
 	Total Subscribers: 
 	 <strong>
 		<!-- tmpl_var count -->
