--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -101,7 +101,7 @@
 	  </tr>
 	  <!-- tmpl_if __last__ --> 
 	  </table>
-	  <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+	  <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
 	  <!-- /tmpl_if --> 
 	<!-- /tmpl_loop -->
 	<p>&nbsp;</p>
@@ -205,7 +205,7 @@
 		</tr>
 		<!-- /tmpl_unless -->	   
 	  </table>
-	  <p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
+	  <p class="text-right"><strong>Total:</strong> <!-- tmpl_var __counter__ -->&nbsp;</p> 
 	  <!-- /tmpl_if --> 
 	
 	<!-- /tmpl_loop -->
