--- a/dada/templates/newsfeed_widget.tmpl
+++ b/dada/templates/newsfeed_widget.tmpl
@@ -3,7 +3,7 @@
 
 <!-- tmpl_if list_settings.publish_archives_rss --> 
 
-    <p style="text-align:right">
+    <p class="text-right">
     
     
      (archive
