--- a/dada/templates/extensions/blog_index/blog_index.tmpl
+++ b/dada/templates/extensions/blog_index/blog_index.tmpl
@@ -49,7 +49,7 @@
 
 
     
-    <p style="text-align:right">
+    <p class="text-right">
      <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list -->/<!-- tmpl_var message_id -->/">
       [Permalink]
      </a>
