--- a/dada/templates/list_template_header_code_block.tmpl
+++ b/dada/templates/list_template_header_code_block.tmpl
@@ -1,6 +1,6 @@
 <!-- begin <!-- tmpl_var PROGRAM_NAME --> list_template_header_code_block.tmpl --> 
 
-<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/foundation/foundation.css" >
+<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/foundation.css" >
 <!-- tmpl_if add_app_css -->
     <!-- tmpl_if comment -->
 		<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" >
@@ -9,20 +9,20 @@
 
 
 <!-- tmpl_if include_jquery_lib --> 
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.11.3.min.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-1.11.3.min.js"></script>
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if include_jqueryui_lib --> 
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-ui-1.9.1.custom.min.js"></script>
-<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery-ui-1.9.1.custom.min.css">
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-ui-1.9.1.custom.min.js"></script>
+<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery-ui-1.9.1.custom.min.css">
 <!-- /tmpl_if --> 
 
 
 <!-- tmpl_if include_app_user_js -->
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.validate.js"></script>
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery.validate.js"></script>
     <!-- tmpl_if load_colorbox --> 
-    	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/colorbox/colorbox.css">
-    	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/colorbox/jquery.colorbox-min.js"></script>
+    	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/colorbox/colorbox.css">
+    	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery/colorbox/jquery.colorbox-min.js"></script>
     <!-- /tmpl_if -->
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.user.js"></script>
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.dadamail.js"></script>
